--- a/app/src/main/res/layout/playlist_row.xml
+++ b/app/src/main/res/layout/playlist_row.xml
@@ -1,33 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
-    android:layout_marginBottom="10dp">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/pl_row_img"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <!-- <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         android:layout_alignParentLeft="true"
+         android:background="#cfFFB74D"
+         android:padding="20dp"
+         android:orientation="vertical">-->
+
+    <TextView
+        android:id="@+id/pl_row_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:background="#cfFFB74D"
-        android:padding="20dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/pl_row_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="Title"
-            android:textColor="#004D40"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+        android:paddingLeft="10dp"
+        android:text="Title"
+        android:textColor="#004D40"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/pl_row_img"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-    </LinearLayout>
-</RelativeLayout>
+    <!--</LinearLayout>-->
+</android.support.constraint.ConstraintLayout>
